SET(scripts_STAT_SRCS
    include/EscortAI.cpp
    include/EscortAI.h
    include/EventAI.cpp
    include/EventAI.h
    include/FollowerAI.cpp
    include/FollowerAI.h
    include/GenericCreature.cpp
    include/SimpleCooldown.h
    include/SimpleCooldown.cpp
    include/ScriptedCreature.cpp
    include/ScriptedCreature.h
    include/ScriptedGossip.h
    include/ScriptedInstance.cpp
    include/ScriptedInstance.h
    include/SimpleAI.cpp
    include/SimpleAI.h
    include/precompiled.cpp
    include/precompiled.h
    azeroth/arathi_highlands.cpp
    azeroth/alterac_mountains.cpp
    azeroth/alterac_valley/alterac_bowman.cpp
    azeroth/alterac_valley/AV_Warmasters.cpp
    azeroth/alterac_valley/boss_balinda.cpp
    azeroth/alterac_valley/boss_drekthar.cpp
    azeroth/alterac_valley/boss_galvangar.cpp
    azeroth/alterac_valley/boss_vanndar.cpp
    azeroth/blackrock_depths/blackrock_depths.cpp
    azeroth/blackrock_depths/boss_ambassador_flamelash.cpp
    azeroth/blackrock_depths/boss_anubshiah.cpp
    azeroth/blackrock_depths/boss_emperor_dagran_thaurissan.cpp
    azeroth/blackrock_depths/boss_general_angerforge.cpp
    azeroth/blackrock_depths/boss_gorosh_the_dervish.cpp
    azeroth/blackrock_depths/boss_grizzle.cpp
    azeroth/blackrock_depths/boss_high_interrogator_gerstahn.cpp
    azeroth/blackrock_depths/boss_magmus.cpp
    azeroth/blackrock_depths/boss_moira_bronzebeard.cpp
    azeroth/blackrock_depths/boss_tomb_of_seven.cpp
    azeroth/blackrock_depths/def_blackrock_depths.h
    azeroth/blackrock_depths/instance_blackrock_depths.cpp
    azeroth/blackrock_spire/boss_drakkisath.cpp
    azeroth/blackrock_spire/boss_gyth.cpp
    azeroth/blackrock_spire/boss_halycon.cpp
    azeroth/blackrock_spire/boss_highlord_omokk.cpp
    azeroth/blackrock_spire/boss_mother_smolderweb.cpp
    azeroth/blackrock_spire/boss_overlord_wyrmthalak.cpp
    azeroth/blackrock_spire/boss_pyroguard_emberseer.cpp
    azeroth/blackrock_spire/boss_quartermaster_zigris.cpp
    azeroth/blackrock_spire/boss_rend_blackhand.cpp
    azeroth/blackrock_spire/boss_shadow_hunter_voshgajin.cpp
    azeroth/blackrock_spire/boss_the_beast.cpp
    azeroth/blackrock_spire/boss_warmaster_voone.cpp
    azeroth/blackrock_spire/def_blackrock_spire.h
    azeroth/blackrock_spire/instance_blackrock_spire.cpp
    azeroth/blackwing_lair/boss_broodlord_lashlayer.cpp
    azeroth/blackwing_lair/boss_chromaggus.cpp
    azeroth/blackwing_lair/boss_ebonroc.cpp
    azeroth/blackwing_lair/boss_firemaw.cpp
    azeroth/blackwing_lair/boss_flamegor.cpp
    azeroth/blackwing_lair/boss_nefarian.cpp
    azeroth/blackwing_lair/boss_razorgore.cpp
    azeroth/blackwing_lair/boss_vaelastrasz.cpp
    azeroth/blackwing_lair/boss_victor_nefarius.cpp
    azeroth/blackwing_lair/instance_blackwing_lair.cpp
    azeroth/blasted_lands.cpp
    azeroth/burning_steppes.cpp
    azeroth/deadmines/def_deadmines.h
    azeroth/deadmines/deadmines.cpp
    azeroth/eastern_plaguelands.cpp
    azeroth/elwynn_forest.cpp
    azeroth/dun_morogh.cpp
    azeroth/hinterlands.cpp
    azeroth/ironforge.cpp
    azeroth/karazhan/boss_curator.cpp
    azeroth/karazhan/boss_maiden_of_virtue.cpp
    azeroth/karazhan/boss_midnight.cpp
    azeroth/karazhan/boss_moroes.cpp
    azeroth/karazhan/boss_netherspite.cpp
    azeroth/karazhan/boss_nightbane.cpp
    azeroth/karazhan/boss_prince_malchezaar.cpp
    azeroth/karazhan/boss_shade_of_aran.cpp
    azeroth/karazhan/boss_terestian_illhoof.cpp
    azeroth/karazhan/bosses_opera.cpp
    azeroth/karazhan/chess_event.cpp
    azeroth/karazhan/def_karazhan.h
    azeroth/karazhan/instance_karazhan.cpp
    azeroth/karazhan/karazhan.cpp
    azeroth/loch_modan.cpp
    azeroth/molten_core/boss_baron_geddon.cpp
    azeroth/molten_core/boss_garr.cpp
    azeroth/molten_core/boss_gehennas.cpp
    azeroth/molten_core/boss_golemagg.cpp
    azeroth/molten_core/boss_lucifron.cpp
    azeroth/molten_core/boss_magmadar.cpp
    azeroth/molten_core/boss_majordomo_executus.cpp
    azeroth/molten_core/boss_ragnaros.cpp
    azeroth/molten_core/boss_shazzrah.cpp
    azeroth/molten_core/boss_sulfuron_harbinger.cpp
    azeroth/molten_core/def_molten_core.h
    azeroth/molten_core/instance_molten_core.cpp
    azeroth/molten_core/molten_core.cpp
    azeroth/naxxramas/boss_anubrekhan.cpp
    azeroth/naxxramas/boss_faerlina.cpp
    azeroth/naxxramas/boss_gluth.cpp
    azeroth/naxxramas/boss_gothik.cpp
    azeroth/naxxramas/boss_grobbulus.cpp
    azeroth/naxxramas/boss_heigan.cpp
    azeroth/naxxramas/boss_highlord_mograine.cpp
    azeroth/naxxramas/boss_kelthuzad.cpp
    azeroth/naxxramas/boss_four_horsemen.cpp
    azeroth/naxxramas/boss_loatheb.cpp
    azeroth/naxxramas/boss_maexxna.cpp
    azeroth/naxxramas/boss_noth.cpp
    azeroth/naxxramas/boss_patchwerk.cpp
    azeroth/naxxramas/boss_razuvious.cpp
    azeroth/naxxramas/boss_sapphiron.cpp
    azeroth/naxxramas/boss_thaddius.cpp
    azeroth/naxxramas/instance_naxxramas.cpp
    azeroth/redridge_mountains.cpp
    azeroth/scarlet_monastery/boss_arcanist_doan.cpp
    azeroth/scarlet_monastery/boss_azshir_the_sleepless.cpp
    azeroth/scarlet_monastery/boss_bloodmage_thalnos.cpp
    azeroth/scarlet_monastery/boss_herod.cpp
    azeroth/scarlet_monastery/boss_high_inquisitor_fairbanks.cpp
    azeroth/scarlet_monastery/boss_houndmaster_loksey.cpp
    azeroth/scarlet_monastery/boss_interrogator_vishas.cpp
    azeroth/scarlet_monastery/boss_scorn.cpp
    azeroth/scarlet_monastery/boss_headless_horseman.cpp
    azeroth/scarlet_monastery/boss_mograine_and_whitemane.cpp
    azeroth/scarlet_monastery/instance_scarlet_monastery.cpp
    azeroth/scarlet_monastery/def_scarlet_monastery.h
    azeroth/scholomance/boss_darkmaster_gandling.cpp
    azeroth/scholomance/boss_death_knight_darkreaver.cpp
    azeroth/scholomance/boss_doctor_theolen_krastinov.cpp
    azeroth/scholomance/boss_illucia_barov.cpp
    azeroth/scholomance/boss_instructor_malicia.cpp
    azeroth/scholomance/boss_jandice_barov.cpp
    azeroth/scholomance/boss_kormok.cpp
    azeroth/scholomance/boss_lord_alexei_barov.cpp
    azeroth/scholomance/boss_lorekeeper_polkelt.cpp
    azeroth/scholomance/boss_ras_frostwhisper.cpp
    azeroth/scholomance/boss_the_ravenian.cpp
    azeroth/scholomance/boss_vectus.cpp
    azeroth/scholomance/def_scholomance.h
    azeroth/scholomance/instance_scholomance.cpp
    azeroth/scholomance/scholomance.cpp
    azeroth/searing_gorge.cpp
    azeroth/shadowfang_keep/def_shadowfang_keep.h
    azeroth/shadowfang_keep/instance_shadowfang_keep.cpp
    azeroth/shadowfang_keep/shadowfang_keep.cpp
    azeroth/silverpine_forest.cpp
    azeroth/stormwind_city.cpp
    azeroth/stranglethorn_vale.cpp
    azeroth/stratholme/boss_baron_rivendare.cpp
    azeroth/stratholme/boss_baroness_anastari.cpp
    azeroth/stratholme/boss_cannon_master_willey.cpp
    azeroth/stratholme/boss_dathrohan_balnazzar.cpp
    azeroth/stratholme/boss_magistrate_barthilas.cpp
    azeroth/stratholme/boss_maleki_the_pallid.cpp
    azeroth/stratholme/boss_nerubenkan.cpp
    azeroth/stratholme/boss_order_of_silver_hand.cpp
    azeroth/stratholme/boss_postmaster_malown.cpp
    azeroth/stratholme/boss_ramstein_the_gorger.cpp
    azeroth/stratholme/boss_timmy_the_cruel.cpp
    azeroth/stratholme/def_stratholme.h
    azeroth/stratholme/instance_stratholme.cpp
    azeroth/stratholme/stratholme.cpp
    azeroth/sunken_temple/def_sunken_temple.h
    azeroth/sunken_temple/instance_sunken_temple.cpp
    azeroth/sunken_temple/sunken_temple.cpp
    azeroth/swamp_of_sorrows.cpp
    azeroth/the_balance_of_light_and_shadow.cpp
    azeroth/tirisfal_glades.cpp
    azeroth/uldaman/boss_archaedas.cpp
    azeroth/uldaman/instance_uldaman.cpp
    azeroth/uldaman/boss_ironaya.cpp
    azeroth/uldaman/uldaman.cpp
    azeroth/undercity.cpp
    azeroth/western_plaguelands.cpp
    azeroth/westfall.cpp
    azeroth/wetlands.cpp
    azeroth/zulgurub/boss_arlokk.cpp
    azeroth/zulgurub/boss_gahzranka.cpp
    azeroth/zulgurub/boss_grilek.cpp
    azeroth/zulgurub/boss_hakkar.cpp
    azeroth/zulgurub/boss_hazzarah.cpp
    azeroth/zulgurub/boss_jeklik.cpp
    azeroth/zulgurub/boss_jindo.cpp
    azeroth/zulgurub/boss_mandokir.cpp
    azeroth/zulgurub/boss_marli.cpp
    azeroth/zulgurub/boss_renataki.cpp
    azeroth/zulgurub/boss_thekal.cpp
    azeroth/zulgurub/boss_venoxis.cpp
    azeroth/zulgurub/boss_wushoolay.cpp
    azeroth/zulgurub/def_zulgurub.h
    azeroth/zulgurub/instance_zulgurub.cpp
    custom/custom_example.cpp
    custom/custom_gnominizer.cpp
    custom/custom_gossip_codebox.cpp
    custom/custom_lottery.cpp
    custom/custom_npc_rez.cpp
    custom/custom_npc_teleporter.cpp
    custom/custom_theinform.cpp
    custom/custom_training_dummy.cpp
    custom/custom_zone_silence.cpp
    custom/on_events.cpp
    custom/test.cpp
    kalimdor/ashenvale.cpp
    kalimdor/azshara.cpp
    kalimdor/the_barrens.cpp
    kalimdor/blackfathom_depths/instance_blackfathom_deeps.cpp
    kalimdor/blackfathom_depths/boss_aku_mai.cpp
    kalimdor/blackfathom_depths/boss_gelihast.cpp
    kalimdor/blackfathom_depths/boss_kelris.cpp
    kalimdor/blackfathom_depths/blackfathom_deeps.cpp
    kalimdor/blackfathom_depths/def_blackfathom_deeps.h
    kalimdor/caverns_of_time/dark_portal/def_dark_portal.h
    kalimdor/caverns_of_time/dark_portal/instance_dark_portal.cpp
    kalimdor/caverns_of_time/dark_portal/dark_portal.cpp
    kalimdor/caverns_of_time/dark_portal/boss_aeonus.cpp
    kalimdor/caverns_of_time/dark_portal/boss_chrono_lord_deja.cpp
    kalimdor/caverns_of_time/dark_portal/boss_temporus.cpp
    kalimdor/caverns_of_time/hyjal/boss_anetheron.cpp
    kalimdor/caverns_of_time/hyjal/boss_archimonde_new.cpp
    kalimdor/caverns_of_time/hyjal/boss_azgalor.cpp
    kalimdor/caverns_of_time/hyjal/boss_kazrogal.cpp
    kalimdor/caverns_of_time/hyjal/boss_rage_winterchill.cpp
    kalimdor/caverns_of_time/hyjal/def_hyjal.h
    kalimdor/caverns_of_time/hyjal/hyjal.cpp
    kalimdor/caverns_of_time/hyjal/hyjal_trash.cpp
    kalimdor/caverns_of_time/hyjal/hyjal_trash.h
    kalimdor/caverns_of_time/hyjal/hyjalAI.cpp
    kalimdor/caverns_of_time/hyjal/hyjalAI.h
    kalimdor/caverns_of_time/hyjal/instance_hyjal.cpp
    kalimdor/caverns_of_time/old_hillsbrad/boss_captain_skarloc.cpp
    kalimdor/caverns_of_time/old_hillsbrad/boss_epoch_hunter.cpp
    kalimdor/caverns_of_time/old_hillsbrad/boss_leutenant_drake.cpp
    kalimdor/caverns_of_time/old_hillsbrad/def_old_hillsbrad.h
    kalimdor/caverns_of_time/old_hillsbrad/instance_old_hillsbrad.cpp
    kalimdor/caverns_of_time/old_hillsbrad/old_hillsbrad.cpp
    kalimdor/darkshore.cpp
    kalimdor/desolace.cpp
    kalimdor/dire_maul/def_dire_maul.h
    kalimdor/dire_maul/instance_dire_maul.cpp
    kalimdor/dire_maul/dire_maul.cpp
    kalimdor/dire_maul/boss_pusillin.cpp
    kalimdor/durotar.cpp
    kalimdor/dustwallow_marsh.cpp
    kalimdor/felwood.cpp
    kalimdor/feralas.cpp
    kalimdor/maraudon/boss_celebras_the_cursed.cpp
    kalimdor/maraudon/boss_landslide.cpp
    kalimdor/maraudon/boss_noxxion.cpp
    kalimdor/maraudon/boss_princess_theradras.cpp
    kalimdor/moonglade.cpp
    kalimdor/mulgore.cpp
    kalimdor/onyxias_lair/boss_onyxia.cpp
    kalimdor/orgrimmar.cpp
    kalimdor/razorfen_downs/def_razorfen_downs.h
    kalimdor/razorfen_downs/instance_razorfen_downs.cpp
    kalimdor/razorfen_downs/razorfen_downs.cpp
    kalimdor/razorfen_downs/boss_amnennar_the_coldbringer.cpp
    kalimdor/razorfen_downs/boss_glutton.cpp
    kalimdor/razorfen_downs/boss_mordresh_fire_eye.cpp
    kalimdor/razorfen_downs/boss_plaguemaw_the_rotting.cpp
    kalimdor/razorfen_downs/boss_ragglesnout.cpp
    kalimdor/razorfen_downs/boss_tuten_kash.cpp
    kalimdor/razorfen_kraul/def_razorfen_kraul.h
    kalimdor/razorfen_kraul/instance_razorfen_kraul.cpp
    kalimdor/razorfen_kraul/razorfen_kraul.cpp
    kalimdor/ruins_of_ahnqiraj/boss_ayamiss.cpp
    kalimdor/ruins_of_ahnqiraj/boss_buru.cpp
    kalimdor/ruins_of_ahnqiraj/boss_kurinnaxx.cpp
    kalimdor/ruins_of_ahnqiraj/boss_moam.cpp
    kalimdor/ruins_of_ahnqiraj/boss_ossirian.cpp
    kalimdor/ruins_of_ahnqiraj/boss_rajaxx.cpp
    kalimdor/ruins_of_ahnqiraj/def_ruins_of_ahnqiraj.h
    kalimdor/ruins_of_ahnqiraj/instance_ruins_of_ahnqiraj.cpp
    kalimdor/silithus.cpp
    kalimdor/stonetalon_mountains.cpp
    kalimdor/tanaris.cpp
    kalimdor/teldrassil.cpp
    kalimdor/temple_of_ahnqiraj/boss_bug_trio.cpp
    kalimdor/temple_of_ahnqiraj/boss_cthun.cpp
    kalimdor/temple_of_ahnqiraj/boss_fankriss.cpp
    kalimdor/temple_of_ahnqiraj/boss_huhuran.cpp
    kalimdor/temple_of_ahnqiraj/boss_ouro.cpp
    kalimdor/temple_of_ahnqiraj/boss_sartura.cpp
    kalimdor/temple_of_ahnqiraj/boss_skeram.cpp
    kalimdor/temple_of_ahnqiraj/boss_twinemperors.cpp
    kalimdor/temple_of_ahnqiraj/boss_viscidus.cpp
    kalimdor/temple_of_ahnqiraj/def_temple_of_ahnqiraj.h
    kalimdor/temple_of_ahnqiraj/instance_temple_of_ahnqiraj.cpp
    kalimdor/temple_of_ahnqiraj/mob_anubisath_sentinel.cpp
    kalimdor/thunder_bluff.cpp
    kalimdor/thousand_needles.cpp
    kalimdor/ungoro_crater.cpp
    kalimdor/wailing_caverns/instance_wailing_caverns.cpp
    kalimdor/wailing_caverns/wailing_caverns.cpp
    kalimdor/wailing_caverns/def_wailing_caverns.h
    kalimdor/winterspring.cpp
    kalimdor/zulfarrak/def_zulfarrak.h
    kalimdor/zulfarrak/instance_zulfarrak.cpp
    kalimdor/zulfarrak/zulfarrak.cpp
    misc/GuardAI.cpp
    misc/GuardAI.h
    misc/areatrigger_scripts.cpp
    misc/go_scripts.cpp
    misc/guards.cpp
    misc/hallowsend.cpp
    misc/item_scripts.cpp
    misc/item_test.cpp
    misc/npc_arenabeastmaster.cpp
    misc/npc_catapultmaster.cpp
    misc/npc_innkeeper.cpp
    misc/npc_interpreter.cpp
    misc/npc_professions.cpp
    misc/npc_spectate.cpp
    misc/npc_teleporter_pvpzone.cpp
    misc/npc_xp_blocker.cpp
    misc/npcs_special.cpp
    misc/npc_mylittlebombling.cpp
    misc/npc_firework_controller.cpp
    outdoor/boss_azuregos.cpp
    outdoor/boss_doomwalker.cpp
    outdoor/boss_doomlord_kazzak.cpp
    outdoor/boss_dragonsofnightmare.cpp
    outdoor/boss_kruul.cpp
    outland/aunchindoun/auchenai_crypts/boss_exarch_maladaar.cpp
    outland/aunchindoun/auchenai_crypts/boss_shirrak_the_dead_watcher.cpp
    outland/aunchindoun/mana_tombs/boss_nexusprince_shaffar.cpp
    outland/aunchindoun/mana_tombs/boss_pandemonius.cpp
    outland/aunchindoun/sethekk_halls/boss_darkweaver_syth.cpp
    outland/aunchindoun/sethekk_halls/boss_tailonking_ikiss.cpp
    outland/aunchindoun/sethekk_halls/boss_anzu.cpp
    outland/aunchindoun/sethekk_halls/def_sethekk_halls.h
    outland/aunchindoun/sethekk_halls/instance_sethekk_halls.cpp
    outland/aunchindoun/sethekk_halls/sethekk_halls.cpp
    outland/aunchindoun/shadow_labyrinth/boss_ambassador_hellmaw.cpp
    outland/aunchindoun/shadow_labyrinth/boss_blackheart_the_inciter.cpp
    outland/aunchindoun/shadow_labyrinth/boss_grandmaster_vorpil.cpp
    outland/aunchindoun/shadow_labyrinth/boss_murmur.cpp
    outland/aunchindoun/shadow_labyrinth/def_shadow_labyrinth.h
    outland/aunchindoun/shadow_labyrinth/instance_shadow_labyrinth.cpp
    outland/azuremyst_isle.cpp
    outland/black_temple/black_temple.cpp
    outland/black_temple/boss_bloodboil.cpp
    outland/black_temple/boss_illidan.cpp
    outland/black_temple/boss_mother_shahraz.cpp
    outland/black_temple/boss_reliquary_of_souls_new.cpp
    outland/black_temple/boss_shade_of_akama.cpp
    outland/black_temple/boss_supremus.cpp
    outland/black_temple/boss_teron_gorefiend.cpp
    outland/black_temple/boss_warlord_najentus.cpp
    outland/black_temple/def_black_temple.h
    outland/black_temple/illidari_council.cpp
    outland/black_temple/instance_black_temple.cpp
    outland/blades_edge_mountains.cpp
    outland/bloodmyst_isle.cpp
    outland/coilfang_resevoir/serpent_shrine/boss_fathomlord_karathress.cpp
    outland/coilfang_resevoir/serpent_shrine/boss_hydross_the_unstable.cpp
    outland/coilfang_resevoir/serpent_shrine/boss_lurker_below.cpp
    outland/coilfang_resevoir/serpent_shrine/boss_lady_vashj.cpp
    outland/coilfang_resevoir/serpent_shrine/boss_leotheras_the_blind.cpp
    outland/coilfang_resevoir/serpent_shrine/boss_morogrim_tidewalker.cpp
    outland/coilfang_resevoir/serpent_shrine/def_serpent_shrine.h
    outland/coilfang_resevoir/serpent_shrine/instance_serpent_shrine.cpp
    outland/coilfang_resevoir/steam_vault/boss_hydromancer_thespia.cpp
    outland/coilfang_resevoir/steam_vault/boss_mekgineer_steamrigger.cpp
    outland/coilfang_resevoir/steam_vault/boss_warlord_kalithresh.cpp
    outland/coilfang_resevoir/steam_vault/def_steam_vault.h
    outland/coilfang_resevoir/steam_vault/instance_steam_vault.cpp
    outland/coilfang_resevoir/underbog/boss_hungarfen.cpp
    outland/coilfang_resevoir/underbog/boss_the_black_stalker.cpp
    outland/coilfang_resevoir/slave_pens/boss_ahune.cpp
    outland/coilfang_resevoir/slave_pens/instance_slave_pens.cpp
    outland/coilfang_resevoir/slave_pens/slave_pens.cpp
    outland//eversong_woods.cpp
    outland//ghostlands.cpp
    outland/gruuls_lair/boss_gruul.cpp
    outland/gruuls_lair/boss_high_king_maulgar.cpp
    outland/gruuls_lair/def_gruuls_lair.h
    outland/gruuls_lair/instance_gruuls_lair.cpp
    outland/hellfire_citadel/blood_furnace/boss_broggok.cpp
    outland/hellfire_citadel/blood_furnace/boss_kelidan_the_breaker.cpp
    outland/hellfire_citadel/blood_furnace/boss_the_maker.cpp
    outland/hellfire_citadel/blood_furnace/instance_blood_furnace.cpp
    outland/hellfire_citadel/blood_furnace/def_blood_furnace.h
    outland/hellfire_citadel/hellfire_ramparts/boss_omor_the_unscarred.cpp
    outland/hellfire_citadel/hellfire_ramparts/boss_watchkeeper_gargolmar.cpp
    outland/hellfire_citadel/hellfire_ramparts/boss_vazruden_the_herald.cpp
    outland/hellfire_citadel/magtheridons_lair/boss_magtheridon.cpp
    outland/hellfire_citadel/magtheridons_lair/def_magtheridons_lair.h
    outland/hellfire_citadel/magtheridons_lair/instance_magtheridons_lair.cpp
    outland/hellfire_citadel/shattered_halls/boss_nethekurse.cpp
    outland/hellfire_citadel/shattered_halls/boss_warbringer_omrogg.cpp
    outland/hellfire_citadel/shattered_halls/def_shattered_halls.h
    outland/hellfire_citadel/shattered_halls/instance_shattered_halls.cpp
    outland/hellfire_citadel/shattered_halls/boss_warchief_kargath_bladefist.cpp
    outland/hellfire_peninsula.cpp
    outland//isle_of_queldanas.cpp
    outland/magisters_terrace/boss_felblood_kaelthas.cpp
    outland/magisters_terrace/boss_priestess_delrissa.cpp
    outland/magisters_terrace/boss_selin_fireheart.cpp
    outland/magisters_terrace/boss_vexallus.cpp
    outland/magisters_terrace/def_magisters_terrace.h
    outland/magisters_terrace/instance_magisters_terrace.cpp
    outland/nagrand.cpp
    outland/netherstorm.cpp
    outland/shadowmoon_valley.cpp
    outland/shartuul_event.cpp
    outland/shattrath_city.cpp
    outland/silvermoon_city.cpp
    outland/sunwell_plateau/boss_kiljaeden_new.cpp
    outland/sunwell_plateau/boss_muru.cpp
    outland/sunwell_plateau/boss_eredar_twins.cpp
    outland/sunwell_plateau/boss_felmyst.cpp
    outland/sunwell_plateau/boss_brutallus.cpp
    outland/sunwell_plateau/boss_kalecgos.cpp
    outland/sunwell_plateau/sunwell_plateau.cpp
    outland/sunwell_plateau/def_sunwell_plateau.h
    outland/sunwell_plateau/instance_sunwell_plateau.cpp
    outland/tempest_keep/arcatraz/arcatraz.cpp
    outland/tempest_keep/arcatraz/boss_harbinger_skyriss.cpp
    outland/tempest_keep/arcatraz/def_arcatraz.h
    outland/tempest_keep/arcatraz/instance_arcatraz.cpp
    outland/tempest_keep/botanica/boss_high_botanist_freywinn.cpp
    outland/tempest_keep/botanica/boss_laj.cpp
    outland/tempest_keep/botanica/boss_warp_splinter.cpp
    outland/tempest_keep/the_eye/boss_alar.cpp
    outland/tempest_keep/the_eye/boss_astromancer.cpp
    outland/tempest_keep/the_eye/boss_kaelthas.cpp
    outland/tempest_keep/the_eye/boss_void_reaver.cpp
    outland/tempest_keep/the_eye/def_the_eye.h
    outland/tempest_keep/the_eye/instance_the_eye.cpp
    outland/tempest_keep/the_eye/the_eye.cpp
    outland/tempest_keep/the_mechanar/boss_mechanolord_capacitus.cpp
    outland/tempest_keep/the_mechanar/boss_gatewatcher_gyrokill.cpp
    outland/tempest_keep/the_mechanar/boss_gatewatcher_ironhand.cpp
    outland/tempest_keep/the_mechanar/boss_nethermancer_sepethrea.cpp
    outland/tempest_keep/the_mechanar/boss_pathaleon_the_calculator.cpp
    outland/tempest_keep/the_mechanar/def_mechanar.h
    outland/tempest_keep/the_mechanar/instance_mechanar.cpp
    outland/tempest_keep/the_mechanar/mechanar.cpp
    outland/terokkar_forest.cpp
    outland/zangarmarsh.cpp
    outland/zulaman/boss_akilzon.cpp
    outland/zulaman/boss_halazzi.cpp
    outland/zulaman/boss_hexlord.cpp
    outland/zulaman/boss_janalai.cpp
    outland/zulaman/boss_nalorakk.cpp
    outland/zulaman/boss_zuljin.cpp
    outland/zulaman/def_zulaman.h
    outland/zulaman/instance_zulaman.cpp
    outland/zulaman/zulaman.cpp
)
    
MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar)
IF(MSVC)
GET_FILENAME_COMPONENT(PrecompiledBasename ${PrecompiledHeader} NAME_WE)
SET(PrecompiledBinary "${CMAKE_CURRENT_BINARY_DIR}/${PrecompiledBasename}.pch")
SET(Sources ${${SourcesVar}})
SET_SOURCE_FILES_PROPERTIES(${Sources}
    PROPERTIES COMPILE_FLAGS "/Yu\"${PrecompiledHeader}\" /FI\"${PrecompiledBinary}\" /Fp\"${PrecompiledBinary}\""
   OBJECT_DEPENDS "${PrecompiledBinary}")  
SET_SOURCE_FILES_PROPERTIES("include/${PrecompiledSource}"
PROPERTIES COMPILE_FLAGS "/Yc\"${PrecompiledHeader}\" /Fp\"${PrecompiledBinary}\""
OBJECT_OUTPUTS "${PrecompiledBinary}")
# Add precompiled header to SourcesVar
LIST(APPEND ${SourcesVar} "include/${PrecompiledSource}")
ENDIF(MSVC)
ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)

#add_definitions(-D_TRINITY_SCRIPT_CONFIG='"${CONF_DIR}/trinitycore.conf"')
IF (WIN32 AND MSVC)
    ADD_MSVC_PRECOMPILED_HEADER("precompiled.h" "precompiled.cpp" scripts_STAT_SRCS)
ENDIF()
add_library(scripts STATIC ${scripts_STAT_SRCS})
ADD_DEPENDENCIES(game scripts revision.h)
